# actool

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  pyproject.toml
actool/: __main__.py  bom.py  car.py  catalog.py  compiler.py  deepmap2.py  icns.py  icon_bundle.py  name_hash.py  packer.py  svg_raster.py  symbols.py
docs/: atlas-packing.md  graph-data.json  icon-bundle-parity.md  icon-shading-plan.md  icon-shading.md  reference.md
src/: bom.rs  car.rs  catalog.rs  compiler.rs  icns.rs  icon_bundle.rs  icon_effects.rs  icon_json.rs  icon_render.rs  lib.rs  main.rs  name_hash.rs  packer.rs  svg_raster.rs  symbols.rs
tests/: bom_parity.rs  car_parity.rs  generate_samples.py  helpers.py  icon_bundle_e2e.rs  icon_bundle_robustness.rs  ios_parity.rs  packer_parity.rs  packing_regressions.rs  svg_parity.rs  test_assetutil.py  test_car_structure.py  test_cli.py  test_dmp2.py  test_host_fields.py  test_inlk.py  test_name_hash.py  test_packing.py  test_regressions.py  test_svg.py  test_symbols.py
tests/ref_samples/Catalog.xcassets/Img001.imageset/: Contents.json
tests/ref_samples/Catalog.xcassets/Img002.imageset/: Contents.json
tests/ref_samples/ref_output/: AppIcon.icns  Assets.car
tools/: Makefile  atlas_experiment.py  atlas_sweep_dataset.json  compare_car.py  compare_variant_renditions.py  extract_pixels.m  l10n_experiment.py  platform_experiment.py  probe_glass_tint.py  probe_gradient_space.py  probe_icon_lighting.py  probe_layer_placement.py  repos.json  sweep_atlas_geometry.py  validate_car.m  validate_car.py  validate_repos.py
(+20 files in other folders)
