[package]
name = "actool"
version = "1.6.0"
edition = "2021"
description = "Open reimplementation of Apple's actool for compiling xcassets"
license = "MIT"

[[bin]]
name = "actool"
path = "src/main.rs"

[lib]
name = "actool"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["png"] }
lzfse = "0.2"
plist = "1.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indexmap = { version = "2", features = ["serde"] }
byteorder = "1"
anyhow = "1"
thiserror = "2"
resvg = "0.45"
usvg = "0.45"
tiny-skia = "0.11"
quick-xml = { version = "0.38", features = ["serialize"] }

[dev-dependencies]
tempfile = "3"
